--- a/assets/style.css
+++ b/assets/style.css
@@ -1,6 +1,6 @@
 body {
   --mainColor: #00abff;
-  --mainBackgroundColor: #121212;
+  --mainBackgroundColor: #6281ae;
   --mainForegroundColor: rgba(195,195,195,0.878431);
   --submenuColor: #272727;
   --submenuBackgroundColor: #272727;
